Fix block loader to include mapped property values
The RootFlattenedDocValuesBlockLoader was not passing mapped property
loaders through to FlattenedDocValuesSyntheticFieldLoader, causing
ES|QL block loading to omit all mapped property values from the
resulting JSON. Also fixed writeToBlock to use hasValue() so it does
not emit null when only mapped properties have data.

Made-with: Cursor